add DeleteAllToDos controller to delete all todo tasks
